# study-buddy

./: .env.example  .gitignore  README.md
api/: main.py  pyproject.toml  test_main.http
api/app/: __init__.py
api/app/core/: __init__.py  firebase.py
api/app/dependencies/: __init__.py  auth.py
api/app/models/: __init__.py  matching.py  profile.py
api/app/routers/: __init__.py  health.py  matching.py  profile.py
api/sdk/: README.md  package.json  tsconfig.json
api/sdk/src/: auth.ts  client.ts  types.ts
backend/: README.md  auth.py  database.db  database.py  main.py  models.py  pyproject.toml
backend/routes/: matching.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: enums.tsx  index.css  main.tsx  utils.tsx
frontend/src/api/: client.ts
frontend/src/components/: ProfileModal.css  ProfileModal.tsx
frontend/src/pages/: Home.tsx  Landing.css  Landing.tsx  SignIn.css  SignIn.tsx  SignUp.css  SignUp.tsx
frontend/study-buddy/: package-lock.json  package.json
frontend/study-buddy/src/: index.css  main.tsx
frontend/study-buddy/src/pages/: Home.css  Home.tsx  Landing.tsx  Login.css  Login.tsx  Main.tsx  SignUp.css  SignUp.tsx
frontend/study_buddy/: pubspec.yaml
frontend/study_buddy/lib/: main.dart
